<?php die(); ?>
Akeeba Panopticon 1.2.3
================================================================================
# [HIGH] Cannot connect to really old WordPress installations (WordPress 5.5 and earlier)
# [HIGH] PHP error when WordPress fails to provide version information

Akeeba Panopticon 1.2.2
================================================================================
+ Optional environment variables-only configuration of containerized Panopticon [gh-696]
+ Clear the cache when relinking a site to Akeeba Backup
~ Do not log CMS Update Found more than once per version
# [MEDIUM] Repeated emails for WordPress plugin updates
# [LOW] Wrong lang string used in WordPress plugin/theme update emails
# [LOW] PHP warnings running Connection Doctor on WordPress sites
# [LOW] Wrong "email" label on Backup options [gh-771]

Akeeba Panopticon 1.2.1
================================================================================
! Fixing a chicken and egg issue not allowing the update to proceed correctly

Akeeba Panopticon 1.2.0
================================================================================
+ WordPress support [gh-38]
+ Much improved Docker support [gh-697]
+ Translatable dates
+ Load TinyMCE translations
+ Batch processing sites
+ Control email sending for scheduled backups [gh-712]
+ Auto-ban IPs after many failed login attempts
+ Check passwords against HIBP [gh-728]
~ System Configuration uses more Show On tricks to show/hide relevant settings
~ Expose the Avatars setting in System Configuration [gh-729]
~ Session data contents are now encrypted at rest
~ Session improvements
~ Expose the Behind Load Balancer configuration setting
~ Do not send a failure email if a site queued for update is already updated, or disabled
# [HIGH] Some tasks would disable MySQL autocommit without restoring it, leading to weird issues
# [MEDIUM] MaxExec task throws fatal exception when tasks are executed over the web